fix(cli) fix off spacing of edit review button on product page

--- a/client/assets/stylesheets/components/products/_show-products-page.sass
+++ b/client/assets/stylesheets/components/products/_show-products-page.sass
@@ -248,6 +248,7 @@
             margin-bottom: 20px
 
           .edit-review-container
+            margin-top: 20px
             .btn
               padding: 5px 30px
               background: $light-grey
